--- a/django-backend/Pipfile
+++ b/django-backend/Pipfile
@@ -7,8 +7,12 @@ name = "pypi"
 django = "*"
 channels = "*"
 channels-redis = "*"
+python-dotenv = "*"
+django-cors-headers = "*"
+djangorestframework = "*"
+psycopg2-binary = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.10"
+python_version = "3.8.10"
