--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
-    "@material-ui/core": "^4.12.3",
     "@mui/material": "^5.5.0",
     "@mui/styles": "^5.5.0",
     "@testing-library/jest-dom": "^5.16.2",
@@ -18,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-uuid": "^1.0.2",
     "reactdom": "^2.0.0",
     "redis": "^4.0.4",
