Django dependency install

--- a/django-backend/Pipfile
+++ b/django-backend/Pipfile
@@ -12,6 +12,7 @@ django-cors-headers = "*"
 djangorestframework = "*"
 psycopg2-binary = "*"
 djangorestframework-simplejwt = "*"
+django-csp = "*"
 
 [dev-packages]
 
