--- a/django-backend/Pipfile
+++ b/django-backend/Pipfile
@@ -14,6 +14,7 @@ psycopg2-binary = "*"
 djangorestframework-simplejwt = "*"
 django-csp = "*"
 dj-database-url = "*"
+django-filter = "*"
 
 [dev-packages]
 
